--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>André Lubawski - Desenvolvedor de Sistemas</title>
-    <meta name="description" content="Descrição do site">
+    <meta name="description" content="André Lubawski, Desenvolvedor de Sistemas">
     <link rel="stylesheet" href="./style.min.css" />
   </head>
 
@@ -29,12 +29,12 @@
     <section class="experiencia" id="experiencia" aria-label="Experiência">
       <h2 class="subtitulo">Experiência</h2>
       <div>
-        <p class="experiencia-texto">Escrever aqui algumas coisas</p>
+        <p class="experiencia-texto">Escrever aqui</p>
         <div class="empresa">
           <span class="empresa-ano">2045</span>
           <h3 class="empresa-titulo">ABCDE</h3>
           <span class="empresa-titulo">ABCDE</span>
-          <p class="empresa-texto">indoineofmoemfoemfo cemoedoemdoemdoedm</p>
+          <p class="empresa-texto">xxxxxxxxxxxxxxxxx yyyyyyyyyyyyyyy</p>
           <ul class="empresa-habilidades">
             <li>Html</li>
             <li>Html</li>
@@ -46,7 +46,7 @@
           <span class="empresa-ano">2045</span>
           <h3 class="empresa-titulo">ABCDE</h3>
           <span class="empresa-titulo">ABCDE</span>
-          <p class="empresa-texto">indoineofmoemfoemfo cemoedoemdoemdoedm</p>
+          <p class="empresa-texto">xxxxxxxxxxxxxxxxx yyyyyyyyyyyyyyy</p>
           <ul class="empresa-habilidades">
             <li>Html</li>
             <li>Html</li>
@@ -65,12 +65,12 @@
             <li class="faculdade">
               <span class="faculdade-tipo">bacharel</span>
               <h3 class="faculdade-curso">curso</h3>
-              <span class="faculdade-instituicao">intituto</span>
+              <span class="faculdade-instituicao">instituto</span>
             </li>
             <li class="faculdade">
               <span class="faculdade-tipo">bacharel</span>
               <h3 class="faculdade-curso">curso</h3>
-              <span class="faculdade-instituicao">intituto</span>
+              <span class="faculdade-instituicao">instituto</span>
             </li>
           </ul>
           <div class="formacao-extra">
@@ -96,12 +96,12 @@
     <footer class="footer" id="contato">
       <div class="footer-container">
         <p class="footer-texto">
-          Estou disponpivel para novos projetos...
+          Escrever aqui
         </p>
         <ul class="footer-contato">
           <li>email</li>
-          <li>email</li>
-          <li>email</li>
+          <li>telefone</li>
+          <li>instagramg</li>
         </ul>
         <p class="footer-copy">André. Alguns direitos reservados.
         </p>
