informações sobre meu  portfolio

--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<!--
+    Desenvolvedor: André Lubawski
+    Informação: Meu portfolio já está online mas ainda não está finalizado, em breve novas
+    alterações serão adicionadas.
+-->
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
